<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tela_principal"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_tela_principal" />
        <item
            android:id="@+id/nav_tarefas"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_tarefas" />

        <item android:id="@+id/nav_dados_do_usuario"
            android:icon="@drawable/ic_usuario"
            android:title="@string/definicoes_da_conta"
            />

        <item
            android:id="@+id/activity_idiomas"
            android:icon="@drawable/ic_idiomas"
            android:title="@string/idiomas"
            />

        <item
            android:id="@+id/nav_tela_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />


        <item android:id="@+id/deslogar"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"

            />

        <item android:id="@+id/activity_login"
            android:icon="@drawable/ic_cadeado"
            android:title="@string/arquivo_seguro"
            />
    </group>
</menu>