<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/texto_login"
            style="@style/TEXTO_LOGIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/texto_login"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/container_background_preto"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/texto_login" />


        <EditText
            android:id="@+id/email"
            style="@style/TEXTO_LOGIN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_edit_text_branco"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/view" />


        <EditText
            android:id="@+id/senha"
            style="@style/TEXTO_LOGIN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_edit_text_branco"
            android:hint="@string/senha"
            android:inputType="textWebPassword"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/email" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botao_entrar"
            style="@style/TEXTO_LOGIN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_botao_branco"
            android:padding="15dp"
            android:text="@string/entrar"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/senha" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/botao_entrar"
            android:indeterminateTint="@color/verde_claro"
            app:layout_constraintEnd_toEndOf="@id/botao_entrar"
            app:layout_constraintTop_toTopOf="@id/botao_entrar"
            app:layout_constraintBottom_toBottomOf="@id/botao_entrar"
            android:translationZ="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/botao_cadastrar"
            style="@style/TEXTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/cadastrar"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/botao_entrar" />

        <TextView
            android:id="@+id/botao_esqueci_minha_senha"
            style="@style/TEXTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/esqueci_minha_senha"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/botao_cadastrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>